<resources>
    <string name="app_name">Sencerity</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="loggedIn">Successful Login.</string>
    <string name="logOut">Log Out</string>
    <string name="sleep">Sleep</string>
    <string name="dressing">Dressing</string>
    <string name="continence">Continence</string>
    <string name="hygiene">Hygiene</string>
    <string name="mobility">Mobility</string>
    <string name="Food">Food</string>

    <string name="textSample">textViewSample</string>

    <string name="scanBarcode">Scan Barcode</string>
    <string name="serving">Nutritional Information for </string>
    <string name="cals">Calories</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="satFat">of which Saturates</string>
    <string name="carbs">Carbohydrates</string>
    <string name="sugar">of which Sugars</string>
    <string name="fibre">Fibre</string>
    <string name="salt">Salt</string>
    <string name="foodAsk">Would you like to add this food to your daily food intake?</string>
    <string name="addFood">Add Food</string>
    <string name="servingSizeByUser">Serving Size (g)</string>
    <string name="caloriesPerServingEntered">Calories in this Serving</string>
    <string-array name="mealTimeArray">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="servHint">20</string>
    <string name="notSuccessful">There was a problem adding the item to your food diary. Please try again.</string>
    <string name="successful">The item was added to your food diary!</string>
    <string name="foodDiaryHeading">Food Diary</string>
    <string name="returnToFood">Return to Food Diary Page </string>
    <string name="mealType">Meal Type </string>

    <string name="dressingIsEmptyMsg">%1$s has not got dressed today.</string>
    <string name="dressingResult">%1$s got dressed today at %2$s.</string>
    <string name="dressingMultiResult">%1$s first got dressed today at %2$s.\n %1$s most recently changed at %3$s.</string>
    <string name="dressingWashingIsEmpty">%1$s has not used the washing machine today.</string>
    <string name="dressingWashingToday">%1$s used the washing machine today at %2$s.</string>
    <string name="dressingWashingPrevious">%1$s has not used the washing machine today.\n\n The last time their clothes were washed was %2$s at %3$s.</string>
    <string name="washReminderBtn">"Washing Reminder"</string>
    <string name="dressReminderBtn">"Dressing Reminder"</string>
    <string name="reminderQs">Would you like to send a reminder?</string>
    <string name="tokenMsg">The reg token id is %1$s</string>
    <string name="channel_id">default_channel_id</string>
    <string name="channel_name">default_channel</string>
    <string name="sendMessage">Send A Message</string>
    <string name="notifications">View Notifications</string>
    <string name="patientSelection">Please select a user</string>
    <string name="addFoodBarcode">Add New Food</string>
    <string name="foodQsBar">Would you like to add this barcode? </string>
    <string name="fibreHint">Fibre (g)</string>
    <string name="fatHint">Total Fat (g)</string>
    <string name="satFatHint">Sat-Fat (g)</string>
    <string name="carbHint">Carbs (g)</string>
    <string name="sugarHint">Sugar (g)</string>
    <string name="saltHint">Salt (g)</string>
    <string name="servingHint">e.g 100 (g)</string>
    <string name="proteinHint">Protein (g)</string>
    <string name="productHint">Product</string>
    <string name="brandHint">Brand</string>
    <string name="calsHint">kCals</string>
    <string name="welcomeMenu">Welcome to Sencerity</string>



</resources>
