<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NutritionalActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/productNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Product"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/brandTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Brand"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addFoodAsk"
        android:layout_below="@id/cardViewHeader"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewServHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/base"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/titleLinearLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/servingSizeTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/servingSizeTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:hint="@string/servingHint"
                android:inputType="number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/foodDataLinearLayout"
                app:layout_constraintLeft_toRightOf="@id/textViewServHeading"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/titleLinearLayout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/foodDataLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewServHeading">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/cals"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/protein"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/fat"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/satFat"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/carbs"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/sugar"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/fibre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/salt"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/foodDataLinearLayout"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/titleLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/servingSizeTextView">

                <EditText
                    android:id="@+id/kcalsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="1dp"
                    android:hint="@string/calsHint"

                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/proteinTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/proteinHint"

                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/carbsTotalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/carbHint"
                    android:inputType="number|numberDecimal"

                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/fatsTotalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/fatHint"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/satFatTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/satFatHint"
                    android:inputType="number|numberDecimal"

                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/sugarCarbsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/sugarHint"
                    android:inputType="number|numberDecimal"

                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/fibreTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/fibreHint"
                    android:inputType="number|numberDecimal"

                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/saltTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical=".5dp"
                    android:hint="@string/saltHint"
                    android:inputType="number|numberDecimal"

                    android:textSize="14sp" />



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/addFoodAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/FoodButton"
        android:text="@string/foodQsBar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:textColor="@color/base" />

    <Button
        android:id="@+id/FoodButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/dark2"
        android:onClick="onClickAddFood"
        android:text="@string/addFood"
        android:textColor="@color/light2" />


</RelativeLayout>